--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -1,11 +1,11 @@
 server:
- port: 8070
+  port: 8070
 
- eureka:
+eureka:
    instance:
      hostname: localhost
    client:
      fetchRegistry: false
      registerWithEureka: false
      serviceUrl:
-       defaultZone : http://${eureka.instance.hostname}:${server.port}/eureka/
+       defaultZone : http://${eureka.instance.hostname}:${server.port}/eureka
